<resources>
    <string name="app_name">WoAccept</string>

    <string name="no_net">网络连接失败</string>

    <string name="empty_search">找不到您想要的结果</string>
    <string name="empty_order">目前没有%1$s订单</string>
    <string name="empty_review">暂时还没有评论</string>
    <string name="empty_no_review">暂时还没有要评论的商品</string>
    <string name="empty_logistics">暂时还没有物流信息</string>
    <string name="next_step">下一步</string>


    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <!-- main -->

    <string name="home">首页</string>
    <string name="service">服务</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>

    <!--login-->
    <string name="login_title">登录</string>
    <string name="login_user_text">用户名</string>
    <string name="login_pwd_text">密码</string>
    <string name="login_sms_text">验证码</string>
    <string name="login_sms">获取验证码</string>
    <string name="login_user_fail">请输入有效的账号</string>
    <string name="login_pwd_fail">请输入有效的密码</string>
    <string name="login_sms_fail">请输入有效的验证码</string>
    <string name="login_pwd_short">密码长度太短</string>
    <string name="login_sms_tip">验证码已发送到您的手机</string>


    <!-- payment -->
    <string name="payment_title">缴费</string>
    <string name="payment_input_tip">请输入充值号码</string>
    <string name="payment_submit">提交</string>
    <string name="payment_money">应收：￥</string>
    <string name="payment_zero">0.00</string>
    <string name="payment_ten">10元</string>
    <string name="payment_twenty">20元</string>
    <string name="payment_thirty">30元</string>
    <string name="payment_fifty">50元</string>
    <string name="payment_one_hundred">100元</string>
    <string name="payment_two_hundred">200元</string>
    <string name="payment_three_hundred">300元</string>
    <string name="payment_five_hundred">500元</string>
    <string name="payment_custom_money">自定义</string>
    <string name="payment_type">缴费方式:</string>
    <string name="payment_cash">现金</string>
    <string name="payment_yuan">元</string>
    <string name="payment_please_input_number">请输入手机号</string>
    <string name="payment_ing">缴费中&#8230;</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_message">是否确认缴费</string>
    <!-- payment search result -->
    <string name="payment_search_result_title">查询结果</string>
    <string name="payment_search_result_pay">去缴费</string>
    <string name="payment_user_info">客户信息</string>
    <string name="payment_user_fee_info">用户费用信息</string>
    <string name="payment_user_balance">用户余额:</string>
    <string name="payment_user_fee">实时话费:</string>
    <string name="payment_overdue_bill">欠费:</string>
    <string name="payment_reputation">信誉度:</string>
    <string name="payment_symbol_yuan">￥ %1$s</string>
    <string name="payment_customer">客户姓名:</string>
    <string name="payment_id_type">证件类型:</string>
    <string name="payment_id">证件号码:</string>
    <string name="payment_search_hint">查找手机号：:</string>


    <!--选择网络-->
    <string name="new_network">新装入网</string>
    <string name="new_cbss">CBSS-移网</string>
    <string name="new_bss">BSS-移网</string>
    <string name="prelan">是否预配</string>
    <string name="select_num">选号码</string>
    <string name="use_white_card">使用白卡</string>
    <string name="card_num">卡号</string>
    <string name="input_card_num">请输入卡号</string>

    <!--选择号码-->
    <string name="search_by_num">ic 尾号搜索</string>
    <string name="number">号码</string>
    <string name="price">价格</string>
    <string name="filter">筛选</string>
    <string name="type_one_num">一类靓号</string>
    <string name="type_two_num">二类靓号</string>
    <string name="type_three_num">三类靓号</string>
    <string name="type_four_num">四类靓号</string>
    <string name="type_five_num">五类靓号</string>
    <string name="type_six_num">六类靓号</string>
    <string name="type_normal_num">普号</string>
    <string name="min_cost">最低消费￥%1$s</string>
    <string name="pre_cost">预存话费￥%1$s</string>


    <string name="entry_customer_information">录入客户信息</string>
    <string name="customer_information_entry">客户信息录入</string>
    <string name="extend_information">继承</string>
    <string name="custom_phone">联系电话</string>
    <string name="custom_contact_address">通信地址</string>
    <string name="id_address_name">证件地址</string>
    <string name="custom_relation_name">联系人姓名</string>
    <string name="custom_relation_phone">联系人电话</string>
    <string name="custom_develop_channel">发展渠道</string>
    <string name="custom_info_back_up">备注</string>
    <string name="document_type">证件类型</string>
    <string name="idcard_18">18位身份证</string>
    <string name="read_ID">读取身份证</string>
    <string name="custom_name">客户名称</string>
    <string name="certificate_number">证件号码</string>
    <string name="group_information_query">集团信息查询</string>
    <string name="group_customer">集团客户</string>
    <string name="note">备注</string>
    <string name="contacter_phone">联系人电话</string>
    <string name="contacter">联系人</string>
    <string name="contact_number">联系电话</string>
    <string name="Id_address">证件地址</string>
    <string name="valid">证件有效期</string>
    <string name="cancle">取消</string>
    <string name="group_information">集团信息</string>
    <string name="determine">确认</string>
    <string name="inheritance">继承</string>
    <string name="customer_identification">客户标识：</string>
    <string name="customer_name">客户名称：</string>
    <string name="IDcard_number">证件号码：</string>
    <string name="contact_phoneNumber">联系电话：</string>
    <string name="query_customer_information">集团信息查询</string>
    <string name="group_name">集团名</string>
    <string name="group_number">集团编号</string>
    <string name="query">查询</string>
    <string name="write_card">白卡写卡</string>
    <string name="choose_number">已选号码:</string>
    <string name="sim_number">sim卡号</string>
    <string name="write_cards">写卡</string>
    <string name="submit">提交</string>
    <string name="idcard_number">身份证号</string>
    <string name="equipments_list">设备列表</string>
    <string name="refresh">刷新</string>
    <string name="communication_address">通信地址</string>
    <string name="develop_channel">发展渠道</string>
    <string name="develop_person">发展人</string>
    <string name="str_paired_devices">已配对设备</string>
    <string name="str_other_devices">其它可用设备</string>


    <!--蓝牙读卡写卡 -->
    <string name="str_find">搜索设备</string>
    <string name="conning">正在连接设备&#8230;</string>
    <string name="scanning">正在扫描周围设备&#8230;</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有配对设备</string>
    <string name="none_found">暂时没有搜到设备</string>
    <string name="str_please_select_device">请选择一个蓝牙设备</string>
    <string name="bt_lost_connect">蓝牙连接已断开！</string>
    <string name="bt_connected">蓝牙连接成功！ </string>
    <string name="bt_connect_fail">蓝牙连接失败！ </string>
    <string name="bt_readcard_succ">读卡成功！</string>
    <string name="result_data_err">数据解析错误</string>
    <string name="result_id_card_success">身份证读取成功</string>
    <string name="result_bt_no_link">蓝牙未连接</string>
    <string name="result_read_overtime">读卡超时</string>
    <string name="bt_connected_ts">蓝牙已连接到: </string>
    <string name="bt_rssi_value">信号强度: </string>
    <string name="bt_check_fail">测试失败！</string>
    <string name="bt_check_succ">测试成功！</string>
    <string name="connect_bt">连接</string>
    <string name="disconnect_bt">断开</string>
    <string name="readcard">读卡</string>
    <string name="complete">完成</string>
    <string name="back">返回</string>
    <string name="save">保存</string>

    <!-- maintenance 4g -->
    <string name="maintenance_title">4G登网维护</string>
    <string name="maintenance_type">登网类别</string>
    <string name="maintenance_service_code">业务号码</string>
    <string name="maintenance_phone">手机串码</string>
    <string name="maintenance_type_one">农村渠道3/4G登网</string>
    <string name="maintenance_type_two">非农村渠道4G登网</string>
</resources>
