<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_alignParentBottom="true"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/horizontal_line"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="49.5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center_vertical|end">

            <TextView
                android:id="@+id/txt_money_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_money"
                android:textColor="@color/payment_text_select"
                android:textSize="@dimen/_14sp"
                />

            <TextView
                android:id="@+id/txt_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15dp"
                android:text="@string/payment_zero"
                android:textColor="@color/payment_text_select"
                android:textSize="@dimen/_14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/payment_submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sp"/>
    </LinearLayout>
</LinearLayout>