<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="horizontal"
              android:paddingBottom="@dimen/_10dp"
              android:paddingStart="@dimen/_20dp"
              android:paddingTop="@dimen/_10dp">

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/PaymentCheckboxTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_20dp"
        >

        <RelativeLayout
            style="@style/match_wrap"
            android:paddingBottom="@dimen/_5dp"
            android:paddingTop="@dimen/_5dp">

            <TextView
                style="@style/payment_text_left"
                android:text="@string/payment_customer"/>

            <TextView
                android:id="@+id/custName"
                style="@style/payment_text_right"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/match_wrap"
            android:paddingBottom="@dimen/_5dp"
            android:paddingTop="@dimen/_5dp">

            <TextView
                style="@style/payment_text_left"
                android:text="@string/payment_id_type"/>

            <TextView
                android:id="@+id/certType"
                style="@style/payment_text_right"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/match_wrap"
            android:paddingBottom="@dimen/_5dp"
            android:paddingTop="@dimen/_5dp">

            <TextView
                style="@style/payment_text_left"
                android:text="@string/payment_id"/>

            <TextView
                android:id="@+id/certCode"
                style="@style/payment_text_right"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>