<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity">

    <com.neusoft.woaccept.customview.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:mNavButtonIcon="@drawable/title_back"
        app:mRightButtonIcon="@drawable/title_search_right"
        app:mStatueBarIsTransparent="true"
        app:mTitle="@string/payment_title"/>

    <ScrollView
        android:id="@+id/sv_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/white"
                android:hint="@string/payment_input_tip"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:padding="@dimen/_20dp"
                android:textSize="@dimen/_20sp"/>

            <ViewStub
                android:id="@+id/vs_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inflatedId="@+id/ll_root"
                android:layout="@layout/search_payment_view_stub"/>

            <com.neusoft.woaccept.customview.PaymentSegment
                android:id="@+id/payment_segment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:mColumnCount="3"
                app:mIsItemEndEditText="true"
                app:mItemBackground="@drawable/payment_money_selector"
                app:mItemText="@array/money"
                app:mItemTextColor="@color/text_select"
                app:mItemTextSuffix="元"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/white"
                android:padding="@dimen/_20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/payment_type"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/payment_cash"
                    android:textColor="@color/black"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/ll_bottom"
        layout="@layout/activity_payment_bottom"/>
</RelativeLayout>
